Fix image issue

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2>Projects</h2>
     <div class="three-col">
         <div class="card">
-            <img src="images/bj.png" alt="Blackjack app screenshot" width="150">
+            <img src="images/blackjack.png" alt="Blackjack app screenshot" width="150">
                 <div class="row">
 
                     <h3>iOS Blackjack App</h3>
