Made improvements based on peer review

--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
     <h2>Projects</h2>
     <div class="three-col">
         <div class="card">
-            <img src="images/blackjack.png" alt="Blackjack app screenshot" width="150">
+            <img src="images/bj.png" alt="Blackjack app screenshot" width="150">
                 <div class="row">
 
                     <h3>iOS Blackjack App</h3>
                     <ul>
+                        <li>Fluid animations, balance tracking, and decision anlysis</li>
                         <li>Made using SwiftUI 6 with strict concurrency</li>
                     </ul>
                 </div>
@@ -83,16 +84,18 @@
             <div class="row">
                 <h3>Casting Browser App</h3>
                     <ul>
-                        <li>Detects videos using injected JS and casts using GoogleCast SDK</li>
+                        <li>Allows users to cast any video source on any website to Chromecast</li>
                         <li>Utilizes iOS 26 liquid glass and WebKit</li>
+                        <li>Made using SwiftUI 6 with strict concurrency</li>
                     </ul>
             </div>     
         </div>
         <div class="card">
             <img src="images/website.png" alt="Website screenshot" width="150">
             <div class="row">
-                <h3>App Landing Page for Browser App</h3>
+                <h3>Landing Page for Browser App</h3>
                 <ul>
+                    <li>Landing page for my Casting Browser Apps</li>
                     <li>Made using HTML5 and TailwindCSS</li>
                     <li>Hosted on AWS S3 bucket</li>
                 </ul>
